2004-10-02  Don Porter  <dgp@users.sourceforge.net>

	* tests/namespace.test (namespace-8.7):	Another test for save/restore
	of ::errorInfo and ::errorCode during global namespace teardown.

2004-10-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclProc.c (TclObjGetFrame, Tcl_UplevelObjCmd): 
	* generic/tclVar.c (Tcl_UpvarObjCmd): Cache stackframe level
	references in the level object for speed.

2004-09-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_CreateInterp): Removed the flag bit value
	* generic/tclInt.h (Interp):	EXPR_INITIALIZED.  It was set during
	interp creation and never tested.  Whatever purpose it had is in
	the past.

	* generic/tclBasic.c (Tcl_EvalObjEx):	Removed the flag bit value
	* generic/tclInt.h (Interp):	USE_EVAL_DIRECT.  It was used only
	* generic/tcLTest.c (TestevalexObjCmd):	in the testing command
	* tests/parser.test (parse-9.2): [testevalex] and nothing in the
	test suite made use of the capability it enabled.

	* generic/tclBasic.c (Tcl_AddObjErrorInfo): More re-organization
	* generic/tclCmdAH.c (Tcl_ErrorObjCmd):     of the management of
	* generic/tclCmdMZ.c (TclProcessReturn):    the errorCode value.
	* tests/error.test (error-6.4-9):

        * generic/tclNamespace.c (TclTeardownNamespace): Tcl_Obj-ified
        * tests/namespace.test (namespace-8.5,6):       the save/restore
        of ::errorInfo and ::errorCode during global namespace teardown.
        Revised the comment to clarify why this is done, and added tests
        that will fail if this is not done.

        * generic/tclResult.c (TclTransferResult):      Added safety
        checks so that unexpected undefined ::errorInfo or ::errorCode
        will not lead to a segfault.

        * generic/tclTrace.c (TclCallVarTraces):     Save/restore the flag
        * tests/var.test (var-16.1):    values that define part of the
        interpreter state during variable traces.  [Bug 10381021].
