@@ -157,9 +157,9 @@ key but no value.
 \fBdict set \fIdictionaryVariable key \fR?\fIkey ...\fR? \fIvalue\fR
 This operation takes the name of a variable containing a dictionary
 value and places an updated dictionary value in that variable
-containing a mapping from the given key to the given value. In a
-manner analogous to \fBlset\fR, where multiple keys are present, they
-do indexing into nested dictionaries.
+containing a mapping from the given key to the given value. When
+multiple keys are present, this operation creates or updates a chain
+of nested dictionaries.
 .TP
 \fBdict size \fIdictionaryValue\fR
 Return the number of key/value mappings in the given dictionary value.
